--- a/index.html
+++ b/index.html
@@ -2,11 +2,149 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Небольшой городок в аризоне "Sedona"</title>
   </head>
   <body>
+<header>
+<nav>
+  <a>
+    <img src="img/index-logo.svg" width="138" height="70"> alt="Логотип города Sedona">
+    </a>
+  <ul>
+    <li><a href="blank.html">Информация</a></li>
+    <li><a href="blank.html">Фото и видео</a></li>
+    <li><a href="blank.html">Карта Штата</a></li>
+    <li><a href="blank.html">Гостиницы</a></li>
+    </ul>
+    <a href="blank.html">Вход</a>
+  </nav>
+    </header>
+    <main>
+     <h1>Sedona Сайт туристического городка в штате Аризона </h1>
+     <section>
+     <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    </section>
+  <section>
+     <ul>
+       <li>
+         <h3>Настоящий городок</h3>
+         <p>-#1-</p>
+         <p>Седона — не аттракцион для туристов, там
+          течёт своя жизнь</p>
+       </li>
+      </ul>
+    </section>
+    <section>
+    <ul>
+      <li>
+        <h3>Жилье</h3>
+        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      </li>
+     </ul>
+     <ul>
+      <li>
+        <h3>Еда</h3>
+        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </li>
+     </ul>
+     <ul>
+      <li>
+        <h3>Сувениры</h3>
+        <p>Не только китайского, но и местного производства!</p>
+      </li>
+     </ul>
+     </section>
+     <section>
+      <ul>
+        <li>
+          <h3>Там есть Мост дьявола</h3>
+          <p>-#2-</p>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </li>
+       </ul>
+       </section>
+      <section>
+       <ul>
+        <li>
+          <h3>небольшая площадь</h3>
+          <p>-#3-</p>
+          <p>все достопримечательности находятся очень близко</p>
+        </li>
+       </ul>
+       <ul>
+        <li>
+          <h3>красивая дорога</h3>
+          <p>-#-4</p>
+          <p>ехать в седону из лас-вегаса совсем не скучно!/p>
+        </li>
+       </ul>
+       <ul>
+        <li>
+          <h3>мало туристов</h3>
+          <p>-#5-</p>
+          <p>большинство едет в гранд каньон и толпится там</p>
+        </li>
+       </ul>
+       </section>
+       <section>
+         <h2>Заинтересовались?</h2>
+         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+         </section>
+         <section>
+        <h2>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</h2>
+        <form action="https://echo.ahtmlacademy.ru" method="post">
+          <p>
+          <label for="appointment-date">Дата заезда:</label>
+          <input id="appointment-date"type="text" name="date" placeholder="24 АПРЕЛЯ 2017">
+          </p>
+          <p>
+          <label for="appointment-exit">Дата выезда:</label>
+          <input id="appointment-exit" type="text" name="date" placeholder="4 июля 2017">
+          </p>
+          
+            <label for="parents">Взрослые</label>
+            <input id="parents" type="text" name="date" placeholder="2">
+            <label for="kids">Дети</label>
+            <input id="kids" type="text" name="date" placeholder="0">
+            <br>
+            <button type="submit">Найти</button>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+          </form>
+        </section>
+      </main>
+      <footer>
+        <section>
+          <h2>#visitsrdona</h2>
+          <p>
+            <a href="tel:+7800555-86-28">+7 800 555-86-28</a>
+          </p>
+        </section>
+        <section>
+          <ul>
+            <li>
+              <a href="a">twitter</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="a">fb-icon</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="a">youtube</a>
+            </li>
+          </ul>
+        </section>
+          <p>
+          website by 
+          <a href="https://htmlacademy.ru"> .html academy</a>
+          </p>
+        </footer>
+        <section>
+          <h2>Как нас найти?</h2>
+          <!--здесь будет карта-->
+        </section>
   </body>
-</html>
+  </html>
