--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Небольшой городок в аризоне "Sedona"</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href=img/favicon/icon.svg" type="image/svg+html">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
 <header>
